# comb-uv

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/dfy/: arap.hpp  conformal.hpp  embedding.hpp  gimage.hpp  graph.hpp  harmonic.hpp  imgsampler.hpp  io.hpp  manifoldmesh.hpp  mesh.hpp  minheap.hpp  quadmesh.hpp  region.hpp  sampler.hpp  segmentation.hpp  symdirichlet.hpp  tutte.hpp  utils.hpp
src/: main.cpp
src/apps/: diskify.cpp  geomimg.cpp  graphicalabstract.cpp  uvpatches.cpp  uvpatches_experiment.cpp  uvpatches_interact.cpp  vororefine.cpp
src/dfy/: arap.cpp  conformal.cpp  embedding.cpp  gimage.cpp  graph.cpp  harmonic.cpp  imgsampler.cpp  io.cpp  manifoldmesh.cpp  mesh.cpp  minheap.cpp  quadmesh.cpp  region.cpp  sampler.cpp  segmentation.cpp  symdirichlet.cpp  tutte.cpp
